--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "nuxt-ts",
     "build": "nuxt-ts build",
     "start": "nuxt-ts start",
-    "generate": "nuxt-ts generate"
+    "generate": "nuxt-ts generate",
+    "lint": "echo 'nothing to do'"
   },
   "dependencies": {
     "@nuxt/content": "^1.9.0",
